cmake_minimum_required(VERSION 2.8)

PROJECT(QSL)
SET(MyProject_VERSION 0.1.0)

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "QSL")
SET(CPACK_PACKAGE_VENDOR "German Ros")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "1")
SET(CPACK_PACKAGE_VERSION_PATCH "0")

INCLUDE(CPack)

SET(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR})

SET(RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR})

FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(GSL REQUIRED)

#Setting some options
OPTION(USE_GSL "Build GSL support" 1)

IF(USE_GSL AND GSL_FOUND)
ADD_DEFINITIONS (
	-DUSE_QT4
	-DGSL_AVAILABLE 
	-DBLAS_AVAILABLE 
	-DQVMATRIXALGEBRA_AVAILABLE 
   )
ENDIF()

ADD_SUBDIRECTORY(qsl)

